--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/:path*",
-      "destination": "/api/:path*"
+      "destination": "/api/index.ts"
     }
   ],
   "functions": { "api/*.ts": { "maxDuration": 60, "memory": 1024 } },
