--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .DS_Store
 node_modules
-bun.lockb
+package-lock.json
 # PRIVATE: 
 # Everything below is private and won't be pushed to the normal repo but will be posted to a private repo named `[folder-name].private` under the same branch
 # TODO: Implement this
 .vercel
-server
