--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/:path*",
       "destination": "/api/index.ts"
+    },
+    {
+      "source": "/",
+      "destination": "/api/index.ts"
     }
   ],
   "functions": { "api/*.ts": { "maxDuration": 60, "memory": 1024 } },
