--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "dev": "vercel dev"
-  },
+  "scripts": {},
   "dependencies": {
-    "fflate": "^0.8.2"
+    "unzipper": "^0.12.1"
   },
   "devDependencies": {
+    "@types/unzipper": "^0.10.9",
     "typescript": "^5.4.5"
   }
 }
