--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
     "api/*.ts": {
       "maxDuration": 60,
       "memory": 1024,
-      "includeFiles": "api/util.ts"
+      "includeFiles": "api/util/*.*"
     }
   },
   "public": true
