--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ package-lock.json
 # Everything below is private and won't be pushed to the normal repo but will be posted to a private repo named `[folder-name].private` under the same branch
 # TODO: Implement this
 .vercel
+test
